--- a/config/linux.config
+++ b/config/linux.config
@@ -20,6 +20,8 @@ if 'nosdl' not in variants:
     variants.append('sdl')
 if 'nogtk' not in variants:
     variants.append('gtk')
+if 'nogi' not in variants:
+    variants.append('gi')
 
 for f in ['CPPFLAGS', 'CFLAGS', 'CCASFLAGS', 'CXXFLAGS', 'LDFLAGS',
           'OBJCFLAGS']:
