use installed python 3 in windows

--- a/config/windows.config
+++ b/config/windows.config
@@ -30,7 +30,7 @@ else:
 
 target = host
 
-py_prefix='lib/python2.7'
+py_prefix='lib/python3.4'
 
 if not toolchain_prefix:
     toolchain_prefix = os.path.join(home_dir, 'mingw', _path)
@@ -72,12 +72,17 @@ os.environ['ac_cv_lib_bz2_BZ2_bzlibVersion'] = 'yes'
 os.environ['ac_cv_c_attribute_aligned'] = '64'
 
 # Python
-os.environ['am_cv_python_version'] = '2.7'
+#os.environ['am_cv_python_version'] = '2.7'
+os.environ['am_cv_python_version'] = '3.4'
 os.environ['am_cv_python_platform'] = 'win32'
 os.environ['am_cv_python_pyexecdir'] = '%s/%s/site-packages' % (prefix, py_prefix)
 os.environ['am_cv_python_pythondir'] = '%s/%s/site-packages' % (prefix, py_prefix)
-os.environ['PYTHON_INCLUDES'] = '-I%s/include/Python2.7 -I%s/include/Python2.7' % (toolchain_prefix, toolchain_prefix)
-os.environ['PYTHON_LIBS'] = '-lpython27 -shrext .pyd'
+#os.environ['PYTHON_INCLUDES'] = '-I%s/include/Python2.7 -I%s/include/Python2.7' % (toolchain_prefix, toolchain_prefix)
+
+os.environ['PYTHON_INCLUDES'] = '-I%s/include/python3.4m' % os.path.join(home_dir, 'dist', 'windows_x86_64')
+
+#os.environ['PYTHON_LIBS'] = '-lpython34 -shrext .pyd'
+os.environ['PYTHON_LIBS'] = '-lpython34'
 
 # DirectX and DirectSound
 os.environ['DIRECTSOUND_CFLAGS'] = '-I%s/%s/include/directx' % (toolchain_prefix, host)
