use python2.7 globally again for gi

--- a/config/windows.config
+++ b/config/windows.config
@@ -46,7 +46,7 @@ os.environ['OBJCFLAGS'] = '-Wall -g -O2 '
 ccache = use_ccache and 'ccache ' or ''
 
 # Toolchain environment
-os.environ['CFLAGS'] += "-DWINVER=0x0501 -D_WIN32_WINNT=0x0501"
+os.environ['CFLAGS'] += "-DWINVER=0x0501 -D_WIN32_WINNT=0x0501 -DMS_WIN64"
 os.environ['LIBRARY_PATH'] = "%s/lib" % prefix
 os.environ['CXXFLAGS']=os.environ['CFLAGS']
 os.environ['CC']= '%s%s' % (ccache, cmd('gcc'))
@@ -81,8 +81,18 @@ os.environ['am_cv_python_pythondir'] = '%s/%s/site-packages' % (prefix, py_prefi
 
 os.environ['PYTHON_INCLUDES'] = '-I%s/include/python3.4m' % os.path.join(home_dir, 'dist', 'windows_x86_64')
 
-#os.environ['PYTHON_LIBS'] = '-lpython34 -shrext .pyd'
+#os.environ['PYTHON_LIBS'] = '-lpython27 -shrext .pyd'
 os.environ['PYTHON_LIBS'] = '-lpython34'
+
+#override
+py_prefix='lib/python2.7'
+os.environ['am_cv_python_version'] = '2.7'
+os.environ['am_cv_python_platform'] = 'win32'
+os.environ['am_cv_python_pyexecdir'] = '%s/%s/site-packages' % (prefix, py_prefix)
+os.environ['am_cv_python_pythondir'] = '%s/%s/site-packages' % (prefix, py_prefix)
+os.environ['PYTHON_INCLUDES'] = '-I%s/include/Python2.7 -I%s/include/Python2.7' % (toolchain_prefix, toolchain_prefix)
+#os.environ['PYTHON_LIBS'] = '-lpython27 -shrext .pyd'
+os.environ['PYTHON_LIBS'] = '-lpython27'
 
 # DirectX and DirectSound
 os.environ['DIRECTSOUND_CFLAGS'] = '-I%s/%s/include/directx' % (toolchain_prefix, host)
