--- a/config/windows.config
+++ b/config/windows.config
@@ -30,8 +30,6 @@ else:
 
 target = host
 
-py_prefix='lib/python2.7'
-
 if not toolchain_prefix:
     toolchain_prefix = os.path.join(home_dir, 'mingw', _path)
 
@@ -46,7 +44,7 @@ os.environ['OBJCFLAGS'] = '-Wall -g -O2 '
 ccache = use_ccache and 'ccache ' or ''
 
 # Toolchain environment
-os.environ['CFLAGS'] += "-DWINVER=0x0501 -D_WIN32_WINNT=0x0501"
+os.environ['CFLAGS'] += "-DWINVER=0x0501 -D_WIN32_WINNT=0x0501 -DMS_WIN64"
 os.environ['LIBRARY_PATH'] = "%s/lib" % prefix
 os.environ['CXXFLAGS']=os.environ['CFLAGS']
 os.environ['CC']= '%s%s' % (ccache, cmd('gcc'))
@@ -72,12 +70,13 @@ os.environ['ac_cv_lib_bz2_BZ2_bzlibVersion'] = 'yes'
 os.environ['ac_cv_c_attribute_aligned'] = '64'
 
 # Python
+py_prefix='lib/python2.7'
 os.environ['am_cv_python_version'] = '2.7'
 os.environ['am_cv_python_platform'] = 'win32'
 os.environ['am_cv_python_pyexecdir'] = '%s/%s/site-packages' % (prefix, py_prefix)
 os.environ['am_cv_python_pythondir'] = '%s/%s/site-packages' % (prefix, py_prefix)
 os.environ['PYTHON_INCLUDES'] = '-I%s/include/Python2.7 -I%s/include/Python2.7' % (toolchain_prefix, toolchain_prefix)
-os.environ['PYTHON_LIBS'] = '-lpython27 -shrext .pyd'
+os.environ['PYTHON_LIBS'] = '-lpython27'
 
 # DirectX and DirectSound
 os.environ['DIRECTSOUND_CFLAGS'] = '-I%s/%s/include/directx' % (toolchain_prefix, host)
